app/www/stylesheet.css
/* ... */
/* woodwell font */
@font-face {
    font-family: "Ginto normal";
    src: url('/GintoNormal-Regular.ttf');
}

body {
    margin: 0;
    padding: 0;
    font-family: 'Ginto normal', monospace;
    --bs-body-font-family: 'Ginto normal', monospace;
}

.container-fluid {
    margin: 0;
    --bs-gutter-x: 0rem;
}

#layout {
    display: flex;
    flex-direction: column;
    position: relative;
    width: 100vw;
    min-width: 250px;
    height: 100vh;
    max-height: 1200px;
    overflow: hidden;
}

#navbar {
    display: flex;
    height: var(--navbar-height);
    width: 100%;
    background-color: var(--background-color);
    border-bottom: 1px solid var(--border-color);
    --bs-gutter-x: 0;
    /* border: 1px solid orange; */
}

#navbar-inner-container {
    display: flex;
    height: 100%;
    width: 100%;
    margin: 0 10px;
}

#tab_menu {
    /* margin: 0px 1px; */
    margin: 0px 0px;
}

.nav-tabs {
    --bs-nav-tabs-border-width: 0px;
    --bs-nav-tabs-border-color: none;
    --bs-nav-tabs-border-radius: none;
    --bs-nav-tabs-link-active-bg: var(--white);
    --bs-nav-tabs-link-active-color: var(--black);
    --bs-nav-tabs-link-hover-border-color: none;
}

.nav {
    --bs-nav-link-color: var(--gray);
    --bs-nav-link-hover-color: none;
    --bs-nav-link-padding-x: 1rem;
}

.nav-tabs .nav-link, .nav-tabs > li > a {
    padding: 0rem 0rem;
}

.nav-item {
    margin: auto 1rem;
}

.nav-item > .nav-link.active {
    border-bottom: 1px solid var(--black);
}

#logo-container {
    display: flex;
    justify-content: flex-end;
    width: fit-content;
    height: var(--navbar-height);
    margin: 0px auto;
    /* border: 1px solid purple; */
}

#logo-inner-container {
    display: flex;
    height: 100%;
    align-items: center;
}

#org-title {
    padding: 5px 10px 5px 5px;
    margin-bottom: 0px;
    font-size: 1.0rem;
}

#menu-container {
    display: flex;
    flex: 1;
    height: var(--navbar-height);
    /* border: 1px solid limegreen; */
}

#menu-inner-container {
    display: flex;
    justify-content: flex-start;
    height: 80%;
    width: 100%;
    margin: auto 0;
}

#load_data_button {
    position: absolute;
    top: 40%;
    left: 50%;
    transform: translateX(-50%);
    padding: 0.5rem 0.25rem;
}

#clear-selected-states-container, #process-data-container {
    display: flex;
    width: 100%;
    justify-content: center;
}

.bslib-task-button {
    --bs-btn-color: var(--black);
    --bs-btn-bg: var(--white);
    --bs-btn-border-color: None;

    --bs-btn-hover-color: var(--white);
    --bs-btn-hover-bg: var(--gray);
    --bs-btn-hover-border-color: None;

    --bs-btn-active-color: var(--white);
    --bs-btn-active-bg: var(--black);
    --bs-btn-active-border-color: None;
    --bs-btn-active-shadow: None;
    --bs-btn-focus-shadow-rgb: None;

    --bs-btn-disabled-color: var(--white);
    --bs-btn-disabled-bg: var(--black);
    --bs-btn-disabled-border-color: None;
    --bs-btn-disabled-opacity: 1.0;

    outline: 1px solid var(--black);
}

.bslib-task-button[case="ready"] {
    color: var(--black);
    background-color: var(--white);
    outline: 1px solid var(--black);
}

/* .bslib-task-button[case="busy"] {
    color: var(--white);
    background-color: var(--black);
    outline: None;
} */

.action-button {
    border: 0rem;
    padding: 0 1rem;
    --bs-btn-color: var(--black);
    --bs-btn-bg: var(--white);
    --bs-btn-border-color: None;
}

.action-button:disabled {
    color: var(--white);
    background-color: var(--black)
}

#clear_states_button, #process_data_button {
    width: 100%;
    outline: 1px solid var(--black);
    padding: 0.5rem 0rem;
}

#clear_states_button {
    margin-bottom: 30px;
}

#process_data_button {
    margin-bottom: 40px;
}

#process_data_button:hover {
    border-width: 0px;
    outline-width: 0px;
}

.bslib-task-button:hover {
    border-width: 0px;
    outline-width: 0px;
}

/* span > svg.py-shiny-spin {
    display: none;
} */

#menu-icon-container {
    display: flex;
    height: 100%;
    margin: 0 1.0rem
}

#menu-icon {
    display: block;
    margin: auto;
}

#container {
    position: relative;
    width: 100%;
    height: calc(100% - var(--navbar-height));
    display: flex;
}

#update-message-container {
    position: absolute;
    display: flex;
    width: 100%;
    height: 100%;
    background-color: var(--white);
    justify-content: center;
    align-items: center;
}

#update-message {
    border: 1px solid var(--red);
    color: var(--red);
    align-items: center;
    justify-content: center;
    text-align: center;
    padding: 2rem;
    margin: 1rem;
}

.well {
    background-color: var(--background-color);
    border: 0px;
}

#sidebar-container {
    display: none;
    border-right: 1px solid var(--border-color);
    width: 25vw;
    min-width: 250px;
    max-width: 350px;
    margin: 0;
    border-radius: 0px;
    padding: 0rem; /* this was 1rem before, could be useful for element inside boxes */
    background-color: var(--white);
    overflow-y: auto;
}

#load-data-container {
    width: 100%;
    height: 100%;
    border-radius: 0;
}

#load-data-screen {
    border: 1px solid red;
    position: relative;
    width: 100%;
    height: 100%;
    background-color: rgba(247, 247, 247, 0.25);
}

#sidebar-inner-container {
    height: 100%;
    max-width: 300px;
    margin: 20px auto;
    margin-bottom: 30px;
    padding: 0px 5px;
}

#sidebar {
    height: 100%;
    width: 100%;
    position: relative;
    background-color: var(--background-color);
}

.select-label {
    margin-bottom: 0px;
}

input:focus,
select:focus,
option:focus,
textarea:focus,
button:focus {
    outline: 0;
    box-shadow: none !important;
}

.shiny-input-select {
    margin-bottom: 20px;
    box-shadow: none !important;
    outline: 0;
}

.selectize-control.single,
.selectize-input,
.selectize-dropdown,
.selectize-control.single.input-active .selectize-input {
    box-shadow: none !important;
}
/* ... */

